--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 					<h1><a href="" class="typewrite" style="color:#fff; text-decoration: none;" data-period="2000" data-type='[ "Desarrollador Web", "Programador", "Egresado", "Responsable" ]'><span class="wrap"></span></a>
 					</h1>
                     <div class=" align-items-center justify-content-center justify-content-lg-start pt-3">
-						
-						<div class="button wow animated flip ">Descargar Cv</div>
+						<a href="CVU Daniel Valerio Cruz 2021.pdf" class="button wow animated flip" style="text-decoration: none;">Desacrgar Cv</a></div>
 						
                     </div>
                 </div>
@@ -84,37 +83,40 @@
 			<hr>	
 		<h1 class="wow animate pulse">Competencias</h1>
 		
-		<span style="font-size: 2em; color: orangered;">
-  			<i class="fab fa-6x fa-html5 wow animated fadeInLeftBig"></i>
+		<span style="font-size: 15vh; color: orangered;">
+  			<i class="fab fa-html5 wow animated fadeInLeftBig"></i>
 		</span>
-		<span style="font-size: 2em; color: deepskyblue">
-		<i class="fab fa-6x fa-css3-alt wow animated fadeInDownBig" data-wow-duration="3s"></i>
+		<span style="font-size: 15vh; color: deepskyblue">
+		<i class="fab fa-css3-alt wow animated fadeInDownBig" data-wow-duration="3s"></i>
 		</span>
-		<span style="font-size: 2em; color: mediumpurple">
-		<i class="fab fa-6x fa-bootstrap wow animated fadeInRightBig" data-wow-duration="5s"></i>
+		<span style="font-size: 15vh; color: mediumpurple">
+		<i class="fab fa-bootstrap wow animated fadeInRightBig" data-wow-duration="5s"></i>
 		</span>
-		<span style="font-size: 2em; color: red">
-		<i class="fab fa-6x fa-angular wow animated fadeInUpBig" data-wow-duration="6s"></i>
+		<span style="font-size: 15vh; color: red">
+		<i class="fab fa-angular wow animated fadeInUpBig" data-wow-duration="6s"></i>
 		</span>
-		<span style="font-size: 2em; color: yellow">
-		<i class="fab fa-6x fa-js-square wow animated fadeIn" data-wow-duration="7s"></i>
+		<span style="font-size: 14vh; color: yellow">
+		<i class="fab fa-js-square wow animated fadeIn" data-wow-duration="7s"></i>
 		</span>
-		<span style="font-size: 2em; color: gray">
-		<i class="fas fa-6x fa-database wow animated bounceIn" data-wow-duration="8s"></i>
+		<span style="font-size: 14vh; color: gray">
+		<i class="fas fa-database wow animated bounceIn" data-wow-duration="8s"></i>
 		</span>
-		<span style="font-size: 2em; color: black">
-		<i class="fab fa-6x fa-github wow animated rotateInUpLeft" data-wow-duration="5s"></i>
+		<span style="font-size: 14vh; color: black">
+		<i class="fab fa-github wow animated rotateInUpLeft" data-wow-duration="5s"></i>
 		</span>
-		<span style="font-size: 2em; color: crimson">
-		<i class="fab fa-6x fa-git-alt wow animated rotateInUpRight" data-wow-duration="5s"></i>
+		<span style="font-size: 14vh; color: crimson">
+		<i class="fab fa-git-alt wow animated rotateInUpRight" data-wow-duration="5s"></i>
 		</span>
+		
+	
+			
 			
 		<hr>
 		<h1 style="padding: 20px"> Software</h1>
 		
 		 <div class="row">
         <div class="col-md-12">
-            <h3 class="progress-title wow animate fadeInLeftBig">HTML</h3>
+            <h3 class="progress-title wow animate fadeInLeftBig"></h3>
             <div class="progress">
                 <div class="progress-bar progress-bar-striped active " style="width:85%; background-color: orangered;" >
                     <div class="progress-value">85%</div>
@@ -233,66 +235,67 @@
 	
 	
 	<hr>
-	<h1 class="wow animate flip">Galeria</h1>
+	<h1 class="wow animate flip">Proyectos</h1>
 	<div class="content-wrapper">
  
   <div class="news-card wow animate flipInX">
-    <a href="#" class="news-card__card-link"></a>
+    <a href="https://www.integriapp.com/" class="news-card__card-link"></a>
     <img src="../Portafolio Web/Img/Integri-app.PNG"  alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
-      <h2 class="news-card__title">Integriapp Web page</h2>
+      <h2 class="news-card__title">Integriapp Web</h2>
       <div class="news-card__post-date">Proyecto desarrollado</div>
       <div class="news-card__details-wrapper">
         <p class="news-card__excerpt">Pagina web desarrollada para la empresa Imtegriapp S.A de C.V </p>
-		  <div class="d-grid gap-2">
+		</div>
+		<div class="d-grid gap-2">
 			  <a href="https://www.integriapp.com/" class="btn btn-outline-primary" style="z-index: 1;" role="button">Visitar Web <i class="fas fa-eye"></i></a>
 		  </div>
-		</div>
     </div>
 		</div>
 
   <div class="news-card wow animate flipInY">
-    <a href="#" class="news-card__card-link"></a>
+    <a href="https://integri-time.com/" class="news-card__card-link"></a>
     <img src="../Portafolio Web/Img/Integri-time.PNG" alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Integri-Time</h2>
       <div class="news-card__post-date">Pagina desarrollada</div>
       <div class="news-card__details-wrapper">
         <p class="news-card__excerpt">Pagina web desarrollada para la empresa Imtegriapp S.A de C.V </p>
-        <div class="d-grid gap-2">
+      </div>
+		<div class="d-grid gap-2">
 			  <a href="https://integri-time.com/" class="btn btn-outline-primary" style="z-index: 1;" role="button">Visitar Web <i class="fas fa-eye"></i></a>
 		  </div>
-      </div>
     </div>
   </div>
 
   <div class="news-card wow animate flipInX">
-    <a href="#" class="news-card__card-link"></a>
-    <img src= "Img/Portafolio.PNG"alt="" class="news-card__image">
+    <a href="#index" class="news-card__card-link"></a>
+	  <img src= "Img/Portafolio.PNG" alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Portafolio personal</h2>
       <div class="news-card__post-date">Proyecto desarrollado</div>
       <div class="news-card__details-wrapper">
         <p class="news-card__excerpt">Carta de presentacion del desarrollador Web portafolio personal</p>
-        <div class="d-grid gap-2">
+      </div>
+		 <div class="d-grid gap-2">
 			  <a href="#index" class="btn btn-outline-primary" style="z-index: 1;" role="button">Visitar Web <i class="fas fa-eye"></i></a>
 		  </div>
-      </div>
     </div>
   </div>
 
   <div class="news-card wow animate flipInY">
-    <a href="#" class="news-card__card-link"></a>
+    <a href="https://meditzin.web.app/home" class="news-card__card-link"></a>
     <img src="../Portafolio Web/Img/Meditzin.PNG" alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Proyecto escolar</h2>
       <div class="news-card__post-date">Proyecto escolar</div>
       <div class="news-card__details-wrapper">
         <p class="news-card__excerpt">Proyecto escolar de la carrera Ingenieria en Sistemas Computacionales como parte de calificacion final.</p>
-        <div class="d-grid gap-2">
-			  <a href="https://www.integriapp.com/" class="btn btn-outline-primary" style="z-index: 1;" role="button" >Visitar Web <i class="fas fa-eye"></i></a>
-		  </div>
       </div>
+		<div class="d-grid gap-2">
+			  <a href="https://meditzin.web.app/home" class="btn btn-outline-primary" style="z-index: 1;" role="button" >Visitar Web <i class="fas fa-eye"></i></a>
+		  </div>
+		  </div>
     </div>
   </div>
 
@@ -304,10 +307,10 @@
       <div class="news-card__post-date">Jan 29, 2018</div>
       <div class="news-card__details-wrapper">
         <p class="news-card__excerpt">CRUD </p>
-        <div class="d-grid gap-2">
+      </div>
+		<div class="d-grid gap-2">
 			  <a href="https://meditzin.web.app/home" class="btn btn-outline-primary" style="z-index: 1;" role="button" data-bs-toggle="button">Visitar Web <i class="fas fa-eye"></i></a>
 		  </div>
-      </div>
     </div>
   </div>
 </div>
@@ -424,11 +427,11 @@
 
        <p> &copy; 2021 | Daniel Valerio Cruz</p>
 		<span>
-		<a style="text-decoration: none; color: white" href="https://github.com/DanielValerio117" class="fab fa-github wow animated rotateInUpRight" data-wow-duration="5s"></a>
+		<a style="text-decoration: none; color: white" href="https://github.com/DanielValerio117" class="fab fa-github"></a>
 			
-		<a style="text-decoration: none; color: white" href="https://www.facebook.com/daniel.valeriocruz" class="fab fa-facebook wow animated rotateInUpRight" data-wow-duration="5s"></a>
+		<a style="text-decoration: none; color: white" href="https://www.facebook.com/daniel.valeriocruz" class="fab fa-facebook"></a>
 			
-		<a style="text-decoration: none; color: white" href="www.linkedin.com/in/daniel-valerio-cruz-72a58118a" class="fab fa-linkedin-in wow animated rotateInUpRight" data-wow-duration="5s"></a>
+		<a style="text-decoration: none; color: white" href="www.linkedin.com/in/daniel-valerio-cruz-72a58118a" class="fab fa-linkedin-in"></a>
 		</span>
 
     </div>
