--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
  
   <div class="news-card wow animate flipInX">
     <a href="https://www.integriapp.com/" class="news-card__card-link"></a>
-    <img src="../Portafolio Web/Img/Integri-app.PNG"  alt="" class="news-card__image">
+    <img src="Img/Integri-app.PNG"  alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Integriapp Web</h2>
       <div class="news-card__post-date">Proyecto desarrollado</div>
@@ -255,7 +255,7 @@
 
   <div class="news-card wow animate flipInY">
     <a href="https://integri-time.com/" class="news-card__card-link"></a>
-    <img src="../Portafolio Web/Img/Integri-time.PNG" alt="" class="news-card__image">
+    <img src="Img/Integri-time.PNG" alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Integri-Time</h2>
       <div class="news-card__post-date">Pagina desarrollada</div>
@@ -285,7 +285,7 @@
 
   <div class="news-card wow animate flipInY">
     <a href="https://meditzin.web.app/home" class="news-card__card-link"></a>
-    <img src="../Portafolio Web/Img/Meditzin.PNG" alt="" class="news-card__image">
+    <img src="Img/Meditzin.PNG" alt="" class="news-card__image">
     <div class="news-card__text-wrapper">
       <h2 class="news-card__title">Proyecto escolar</h2>
       <div class="news-card__post-date">Proyecto escolar</div>
