--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width-device, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
 <title>Portafolio Web</title>
+	<link rel="shortcut icon" href="Img/ito.png">
 	<link rel="stylesheet" type="text/css" href="Portafolio.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="fontawesome-free-5.15.3-web/css/all.css">
@@ -72,7 +73,7 @@
 					<h1><a href="" class="typewrite" style="color:#fff; text-decoration: none;" data-period="2000" data-type='[ "Desarrollador Web", "Programador", "Creativo", "Responsable", "Paciente", "Honesto", "Organizado" ]'><span class="wrap"></span></a>
 					</h1>
                     <div class=" align-items-center justify-content-center justify-content-lg-start pt-3">
-						<a href="CVU_Daniel_Valerio_Cruz_2021.pdf" class="button wow animated flip" style="text-decoration: none;">Descargar Cv</a></div>
+						<a href="CV Ingeniero Sistemas Computacionales (Daniel_Valerio_Cruz).pdf" class="button wow animated flip" style="text-decoration: none;">Descargar Cv</a></div>
 						
                     </div>
                
